<resources>
    <string name="app_name">MyMovieShows</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_television">Tv Shows</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie_id">movie_id</string>
    <string name="run_time">Run Time:</string>
    <string name="release_date">Release Date:</string>
    <string name="ratings">Ratings:</string>
    <string name="rating">%.1f/10</string>
    <string name="cast">Cast</string>
</resources>