<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sbz.mymovieshows.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.sbz.mymovieshows.ui.fragments.dashboard.CategoryFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_television"
        android:name="com.sbz.mymovieshows.ui.fragments.notifications.NotificationsFragment"
        android:label="@string/title_television"
        tools:layout="@layout/fragment_notifications" />
</navigation>